2020-01-16    <ralmond@pluto.coe.fsu.edu>

	* R/Status.R (Timer): Added "numeric" method to cast zeros into difftime.  Defaults to seconds.

2019-12-20  Rusell Almond  <ralmond@Cherry>

	* R/Predicates.R ("!reset"): Fixed to use difftime of exactly 0 secs.

2019-12-20    <ralmond@pluto.coe.fsu.edu>

	* R/Status.R (getJS): Added object and verb as possible fields.

2019-11-09  Rusell Almond  <ralmond@Cherry>

	* R/Predicates.R ("!setKeyValue"): Mongo rejects blank keys, so
	check for them here.

2019-06-26  Rusell Almond  <ralmond@Cherry>

	* R/RuleTables.R (findRules): Fixed priority issue.

2019-06-24  Rusell Almond  <ralmond@Cherry>

	* R/RuleTables.R (findRules): Changed so that the phase argument
	is now optional.

	* R/EIEngine.R (processEvent, handleEvent, runTriggerRules)
	(runContextRules, runResetRules, runObservableRules)
	(runStatusRules): The rule search is now done in processEvent
	instead of being repeated five times in the individual functions.
	Also, processEvent returns NULL if the status has not changed, so
	that it does not need to be resaved if there were no applicable
	rules. 

2019-05-12  Rusell Almond  <ralmond@Cherry>

	* R/Status.R (Timer): NA in duration bug.

2019-05-07  Russell Almond  <ralmond@Limu>

	* R/EIEngine.R: Added activate() method, to either insert up
	update as appropriate.

2019-03-18  Rusell Almond  <ralmond@Cherry>

	* R/EIEngine.R (runRule, runTRule): No longer a method of
	EIEngine, pulled out to RuleTable.R
	(processEvent, handleEvent): Pulled these out as functions rather
	than methods.
	(runTriggerRules, runStatusRules, runObservableRules)
	(runResetRules, runContextRules): Pulled these out as functions
	rather than methods.

2019-03-06  Rusell Almond  <ralmond@Cherry>

	* R/Predicates.R (asif.difftime): Rolled back change in
	asif.difftime.  Not sure what this is going to break, but
	currently forcing things to difftimes that should stay as ints or
	reals. 

2019-03-01  Russell Almond  <ralmond@Limu>
