@@ -1,6 +1,6 @@
 Package: EIEvent
-Version: 0.4-6
-Date: 2020/01/16
+Version: 0.5-1
+Date: 2020/06/09
 Title: Evidence Identification Event Processing Engine
 Author: Russell Almond
 Maintainer: Russell Almond <ralmond@fsu.edu>
@@ -8,5 +8,5 @@ Depends: R (>= 3.0), methods, utils, R.utils, Proc4 (>= 0.4), jsonlite, mongolit
 Description: Extracts observables from a sequence of events.
 License: Artistic-2.0 
 URL: https://pluto.coe.fsu.edu/Proc4
-Collate: AAGenerics.R Mongo.R Contexts.R Events.R Status.R Condition.R Predicates.R RuleTables.R testRules.R LL2Proc4.R EIEngine.R
+Collate: AAGenerics.R Mongo.R Contexts.R Events.R Status.R Condition.R Predicates.R RuleTables.R testRules.R LL2Proc4.R EIEngine.R Runners.R
 
